--- a/wordcount/wordcount_app/templates/base.html
+++ b/wordcount/wordcount_app/templates/base.html
@@ -68,9 +68,15 @@
     <!-- header !-->
     <header>
         <div id='navbar' class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-            <a id='logo' href='{% url "home"%}'></a>
+            <a id='logo' href='{% url "home"%}' class='navbar-brand align-self-center'>
                 <img src="{% static 'images/logo.png'%}" width ='35' heigth = '35' all="logo.png">
                 <label class='navbar-brand align-self-center'>Dreamary</label>
+            </a>
+            <div class = 'collapse navbar-collapse'>
+                <div class='navbar-nav'>
+                    <a class = 'nav-item nav-link' href='{% url "new" %}'> 디자이너 등록하기</a>
+                </div>
+            </div>
         </div>
     </header>
 
