--- a/wordcount/wordcount_app/templates/detail.html
+++ b/wordcount/wordcount_app/templates/detail.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class='col-md-4'>
-            <img src='{{designer.Image.url}}' width='150%' alt='Designer_Profile_Image'>
+            <img src='{{designer.image.url}}' width='150%' alt='Designer_Profile_Image'>
         </div>
     </div>
 </div>
