--- a/wordcount/wordcount_app/templates/home.html
+++ b/wordcount/wordcount_app/templates/home.html
@@ -18,56 +18,38 @@
     </div>
 </section>
 <div class="album py-5 bg-light">
-    <div class="container">
-        <div class="card-columns">
-            {%for designer in designers %}
-            <div class='card mb-4 shadow-sm'>
-                <!-- Image -->
-                {% if designer.image %}
-                <img src='{{designer.image.url}}' class='card-img-top' alt='Designer_Image'>
-                {% else %}
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                    xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
-                    aria-label="Placeholder: Thumbnail">
-                    <title>Dreamary</title>
-                    <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
-                        dy=".3em">Profile</text>
-                </svg>
-                {% endif %}
-
-                <div class='card-body'>
-                    <h4 class='card-title'> {{ designer.name }}</h4>
-                    <h6 class='card-text'> {{ designer.address }}</h6>
-                    <br>
-                    <p class='card-text'> {{ designer.description }}</p>
-                    <div class='d-flex justify-content-between align-items-center'>
-                        <div class='btn-group'>
-                            <a href='{%url "detail" designer.id %}' class='btn btn-sm btn-outline-secondary'>자세히
-                                알아보기</a>
-                        </div>
-                    </div>
-                    {%endfor%}
-                </div>
+  <div class="container">
+    <div class="card-columns">
+      {% for designer in designers %}
+      <div class="card mb-4 shadow-sm">
+        <!-- Image -->
+        <a href="{% url 'detail' designer.id %}">
+          {% if designer.image %}
+          <img src="{{ designer.image.url }}" class="card-img-top" alt="Designer_Image">
+          {% else %}
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
+            preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
+            <title>Dreamary</title>
+            <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
+              dy=".3em">Profile</text>
+          </svg>
+          {% endif %}
+        </a>
+        <div class="card-body">
+          <h4 class="card-title">{{ designer.name }}</h4>
+          <h6 class="card-text">{{ designer.address }}</h6>
+          <hr>
+          <p class="card-text">{{ designer.summary }}</p>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+              <a href="{% url 'detail' designer.id %}" class="btn btn-sm btn-outline-secondary">자세히 알아보기</a>
             </div>
-            {% endblock %}
-            <footer class="text-muted">
-                <div class="container">
-                    <p class="float-right">
-                        <a href="#">맨 위로 돌아가기</a>
-                    </p>
-                    <p>Develop Dreamary with Django & Bootstrap</p>
-                    <p>Likelion 8th</p>
-                </div>
-            </footer>
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                crossorigin="anonymous">
-            </script>
-            <script>
-                window.jQuery || document.write(
-                    '<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')
-            </script>
-            <script src="/docs/4.5/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd"
-                crossorigin="anonymous">
-            </script>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
+
+{% endblock %}
