자소설 4강 실습 정리 완료-

--- a/jasoseolproject/jsproject/templates/index.html
+++ b/jasoseolproject/jsproject/templates/index.html
@@ -20,7 +20,7 @@
     {% for jss in all_jss %}
     <a href ='{%url "detail" jss.id %}'>
     <div class='all_jss'>
-        <p>{{jss.id}}</p>
+        <p>{{jss.id}}</p> <!--for문으로 id를 조회-->
         <p>{{jss.title}}</p>
 
         <p>{{jss.content}}</p>
