--- a/jasoseolproject/jsproject/templates/detail.html
+++ b/jasoseolproject/jsproject/templates/detail.html
@@ -14,5 +14,8 @@
 
 <br>
 
+{% if user == my_jss.author %}<!-- 자소설 객체와 작성자와 내가 같으면 수정 삭제가 보이도록 한다-->
 <a href='{% url "update" my_jss.id %}'><button>수정</button></a>
 <a href='{% url "delete" my_jss.id %}'><button>삭제</button></a>
+{% endif %}
+<!-- 이렇게만 한다고 되느냐! 아님...url통해서 접근 가능 views에서 또 추가해주자. -->
