--- a/jasoseolproject/jsproject/templates/index.html
+++ b/jasoseolproject/jsproject/templates/index.html
@@ -9,6 +9,25 @@
     <link rel = 'stylesheet' type='text/css' href='{% static "css/index.css" %}'>
 </head>
 <body>
+    {% if user.is_authenticated %}
+    <a href = '{% url "logout" %}'>
+        <button>로그아웃</button>
+    </a>
+
+    안녕하세요! {{user}}님
+
+    {% else %}
+
+    <a href = '{% url "signup" %}'>
+        <button>회원가입</button>
+    </a>
+    <a href = '{% url "login" %}'>
+        <button>로그인</button>
+    </a>
+    {% endif %}
+
+    
+
     <div class ='make_jss'>
     <a href = '{% url "create"%}'>
         <div class='plus_btn'>
@@ -16,15 +35,20 @@
         </div>
         <p>자기소개서 작성</p>
     </div>
-    
+        <a href="{% url 'my_index' %}">
+            <button>내 자기소개서만 보기</button>
+        </a>
+        <a href="{% url 'index' %}">
+            <button>모든 자기소개서 보기</button>
+        </a>
+    <br>
+
     {% for jss in all_jss %}
     <a href ='{%url "detail" jss.id %}'>
     <div class='all_jss'>
-        <p>{{jss.id}}</p> <!--for문으로 id를 조회-->
+        <p>{{jss.author}}</p> <!--for문으로 id를 조회-->
         <p>{{jss.title}}</p>
-
         <p>{{jss.content}}</p>
-
         <p>{{jss.updated_at|date:'Y-m-d'}}</p> <!--템플릿 필터 년/월/일-->
     </div>
     {% endfor %}
