'자소설닷컴 완성'

--- a/jasoseolproject/jsproject/templates/create.html
+++ b/jasoseolproject/jsproject/templates/create.html
@@ -1,5 +1,13 @@
+{% load static %} <!-- static 사용하기 위해서 항상 잊지 말기 -->
+
 <form method = 'POST' action=''> <!--method 기본 설정은 get 이지만 보안을 위해 POST 사용-->
     {% csrf_token %} <!-- post 방식은 필수적으로 토큰 사용 -->
     {{jss_form.as_p}}
     <input type = 'submit' value='확인'>
 </form>
+    
+    글자수 : <div class="counted_text"></div>
+
+    <script src="{% static 'js/count.js' %}"></script> <!-- 자바스크립트 전용 경로 설정 -->
+</body>
+</html>
